--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FreeFolio - Freelancer Portfolio Template</title>
+    <title>Karthik S Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -64,9 +64,9 @@
                     <h3 class="text-white font-weight-normal mb-3">Hello, this is</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">KARTHIK S</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, UI Designer</div>
+                    <div class="typed-text d-none">Software Developer, Web Developer, Front End Developer, UI Designer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="https://drive.google.com/file/d/1LwgVQNy4Dvdl_5BRpV_i5TKM1knQV4yo/view" class="btn btn-white mr-4">Download CV Resume</a>
+                        <a href="https://drive.google.com/file/d/15cEhBlBcYsysajf4oTregb2P-WDY9jAE/view?usp=sharing" class="btn btn-white mr-4">View CV Resume</a>
                 
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">C Programming(Basics)</h6>
+                            <h6 class="font-weight-bold">C Programming</h6>
                             <h6 class="font-weight-bold">60%</h6>
                         </div>
                         <div class="progress">
@@ -148,6 +148,15 @@
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">MySQL</h6>
                             <h6 class="font-weight-bold">60%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">Springboot Framework</h6>
+                            <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
@@ -211,7 +220,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Animation(Blender)</h6>
+                            <h6 class="font-weight-bold">Animation(Blender3D)</h6>
                             <h6 class="font-weight-bold">65%</h6>
                         </div>
                         <div class="progress">
@@ -220,7 +229,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Adobe Creative Suite(Photoshop, After Effects, Premiere Pro, Illustrator, Express)</h6>
+                            <h6 class="font-weight-bold">Adobe Creative Suite(Photoshop, After Effects, Premiere Pro, Illustrator, XD)</h6>
                             <h6 class="font-weight-bold">60%</h6>
                         </div>
                         <div class="progress">
@@ -581,5 +590,6 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
