--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="E:\profile portfolio.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -593,3 +593,4 @@
 
 
 </html>
+
